<resources>
    <string name="app_name">MDP-16</string>
    <string name="sign_in">Sign In</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_a_device">Don\'t have a device?</string>
    <string name="pair_device">Pair Device</string>
    <string name="new_user">New user?</string>
    <string name="signup_done">SignUp Done</string>
    <string name="new_user2">New User</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="mdp16">MDP16</string>
    <string name="image">IMAGE</string>
    <string name="todo1">TODO1</string>
    <string name="mail">MAIL</string>
    <string name="lock">LOCK</string>
    <string name="mail1">TODO</string>
    <string name="lock2">LOCK2</string>
    <string name="rafic_houssari">Rafic Houssari</string>
    <string name="online">Online</string>
    <string name="capture">CAPTURE</string>
    <string name="zoomout">ZOOMOUT</string>
    <string name="zoomin">ZOOMIN</string>
    <string name="plus">PLUS</string>
    <string name="sign_out">Sign out</string>
    <string name="click_to_pair">Click to pair</string>
    <string name="empty"></string>
    <string name="continuer">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image1">IMAGE1</string>
    <string name="app_intro">appintro</string>
    <string name="whether_it_s_for_safety_or_simply_for_monitoring_surveillance_should_be_taken_seriously">Whether it\'s for safety or simply for monitoring, surveillance should be taken seriously.</string>
    <string name="intro1">INTRO1</string>
    <string name="with_the_help_of_our_mdp16_we_will_be_providing_controllable_cameras_accessible_wherever_you_go">With the help of our MDP16, we will be providing controllable cameras accessible wherever you go.</string>
    <string name="our_devices_are_equipped_with_face_detection_techniques_to_keep_track_of_the_people_who_were_in_range">Our devices are equipped with face detection techniques to keep track of the people who were in range.</string>
    <string name="we_can_assure_quality_and_reliability_through_our_secure_network">We can assure quality and reliability through our secure network.</string>
    <string name="barcode">BARCODE</string>
    <string name="enter_your_device_name">Enter your device name</string>
    <string name="pair">PAIR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="retype_password">Retype Password</string>
    <string name="rename_device">Rename Device</string>
    <string name="remove_device">Remove Device</string>
    <string name="rename">Rename</string>
    <string name="device_name">Device Name</string>
    <string name="set_up_your_device">Set up your Device</string>
    <string name="plug_in_your_camera_scan_this_code_and_wait_for_the_light_on_the_camera_to_turn_green">Plug in your camera, scan this code and wait for the light on the camera to turn green.</string>
    <string name="later">Later</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_you_want_to_delete_10_devices">Are you sure you want to delete 10 devices?</string>
    <string name="auto">Auto</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="setup_auto_mode_range">Setup Auto Mode Range</string>
    <string name="moins">-</string>
    <string name="set_left_limit">Set Left Limit</string>
    <string name="set_right_limit">Set Right Limit</string>
    <string name="scan">Scan</string>
    <string name="recenter">Recenter</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="choose_a_server">Choose A Server</string>
    <string name="select">Select</string>
    <string name="did_your_camera_recenter_correctly">Did your camera recenter correctly?</string>
    <string name="was_you_camera_recentered_correctly">Was you camera recentered correctly?</string>
    <string name="corner2">Corner2</string>
    <string name="corner1">Corner1</string>
    <string name="save">Save</string>
    <string name="re_center">Re-center</string>
    <string name="scan_environement">Scan Environement</string>
    <string name="once_you_start_scanning_you_can_t_control_your_camera_until_the_scan_is_done">Once you start scanning you can\'t control your camera until the scan is done.</string>
    <string name="don_t_stand_in_your_camera_s_view_range_while_the_environement_is_being_scanned">Don\'t stand in your camera\'s view range while the environement is being scanned.</string>
</resources>
