<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <ImageView
        android:id="@+id/down"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/down"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:srcCompat="@drawable/down" />

    <ImageView
        android:id="@+id/left"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/left"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/left" />

    <ImageView
        android:id="@+id/up"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/up"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:srcCompat="@drawable/up" />

    <WebView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollIndicators="none"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/zoomIn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/zoomin"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraView"
        app:srcCompat="@drawable/zoomin" />

    <ImageView
        android:id="@+id/zoomOut"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:contentDescription="@string/zoomout"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/zoomIn"
        app:layout_constraintTop_toBottomOf="@+id/cameraView"
        app:srcCompat="@drawable/zoomout"
        tools:ignore="LabelFor, RtlHardcoded" />

    <ImageView
        android:id="@+id/capture"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/capture"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toBottomOf="@+id/cameraView"
        app:srcCompat="@drawable/photograph"
        tools:ignore="LabelFor, RtlHardcoded" />

    <TextView
        android:id="@+id/angle1Text"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor, RtlHardcoded" />

    <TextView
        android:id="@+id/angle2Text"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:ignore="LabelFor, RtlHardcoded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <Switch
        android:id="@+id/automatic"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:showText="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <ImageView
        android:id="@+id/right"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:contentDescription="@string/right"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="top|end"
        android:text="@string/auto"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraView" />

</androidx.constraintlayout.widget.ConstraintLayout>