<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PairDeviceActivity">

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="#50CDCDCD"
        android:drawableStart="@drawable/photograph"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/device_name"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameText"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/barcodeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:clickable="true"
        android:contentDescription="@string/plus"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/plug_in_your_camera_scan_this_code_and_wait_for_the_light_on_the_camera_to_turn_green"
        android:textColor="#000000"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeImage" />


    <TextView
        android:id="@+id/deviceNameText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="bottom|center"
        android:text="@string/set_up_your_device"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/pairDeviceButton"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_border"
        android:text="@string/continuer"
        android:textAllCaps="false"
        android:textColor="#999999"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/deviceName" />

    <TextView
        android:id="@+id/later"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:text="@string/later"
        android:textColor="#999999"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15321477" />

</androidx.constraintlayout.widget.ConstraintLayout>