<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupRangeActivity">

    <ImageView
        android:id="@+id/upSetup"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/up"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:srcCompat="@drawable/up" />

    <ImageView
        android:id="@+id/downSetup"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/down"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:srcCompat="@drawable/down" />

    <ImageView
        android:id="@+id/leftSetup"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/left"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/left" />

    <ImageView
        android:id="@+id/rightSetup"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:contentDescription="@string/right"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/right" />

    <WebView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollIndicators="none"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/buttonCorner1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/corner1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <Button
        android:id="@+id/buttonCorner2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/corner2"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCorner1" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <TextView
        android:id="@+id/rangeX1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|end"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/moins1"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <TextView
        android:id="@+id/rangeY1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraView" />

    <TextView
        android:id="@+id/rangeX2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical|end"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/moins2"
        app:layout_constraintTop_toBottomOf="@+id/rangeX1" />

    <TextView
        android:id="@+id/rangeY2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="start|center_vertical"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeY1" />

    <TextView
        android:id="@+id/moins1"
        android:layout_width="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/moins"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/rangeY1"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <TextView
        android:id="@+id/moins2"
        android:layout_width="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/moins"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/rangeY2"
        app:layout_constraintTop_toBottomOf="@+id/moins1" />

</androidx.constraintlayout.widget.ConstraintLayout>